<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/access_code" />

            <EditText
                android:id="@+id/accessCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="AVSW02GI92CK23WSKC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/merchant_id" />

            <EditText
                android:id="@+id/merchantId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="233593" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="Order Id" />

            <EditText
                android:id="@+id/orderId"
                android:text="52545658"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/currency" />

            <EditText
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="INR" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="1.00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/redirect_url" />

            <EditText
                android:id="@+id/redirectUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="YOUR REDIRECT URL OUR HERE (ccavResponseHandler.php)" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/cancel_url" />

            <EditText
                android:id="@+id/cancelUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="YOUR CANCEL URL OUR HERE (ccavResponseHandler.php)" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/rsa_url" />

            <EditText
                android:id="@+id/rsaUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="YOUR GET RSA URL OUR HERE (GetRSA.php)" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="48dp"
                android:onClick="onClick"
                android:text="@string/pay_button" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>